<!--
  ~ Copyright (c) 2016 Markus Ressel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">TutorialTooltip</string>

    <string name="settings">Settings</string>

    <string name="key_startColor">startColor</string>
    <string name="title_startColor">Start color</string>
    <color name="default_value_startColor">#ff00</color>

    <string name="key_endColor">endColor</string>
    <string name="title_endColor">End color</string>
    <color name="default_value_endColor">#0f00</color>

    <string name="key_startDiameter">startDiameter</string>
    <string name="title_startDiameter">Start diameter</string>
    <dimen name="default_value_startDiameter">0dp</dimen>

    <string name="key_targetDiameter">targetDiameter</string>
    <string name="title_targetDiameter">Target diameter</string>
    <dimen name="default_value_targetDiameter">50dp</dimen>

    <string name="key_strokeWidth">strokeWidth</string>
    <string name="title_strokeWidth">Stroke width</string>
    <dimen name="default_value_strokeWidth">3dp</dimen>

    <string name="key_delayBetweenWaves">delayBetweenWaves</string>
    <string name="title_delayBetweenWaves">Delay between waves</string>
    <integer name="default_value_delayBetweenWaves">300</integer>

    <string name="key_duration">duration</string>
    <string name="title_duration">Duration</string>
    <integer name="default_value_duration">3000</integer>

    <string name="key_waveCount">waveCount</string>
    <string name="title_waveCount">Wave count</string>
    <integer name="default_value_waveCount">3</integer>

    <string name="summary_dp_value">%1$sdp</string>
    <string name="summary_ms_value">%1$sms</string>

    <string name="tutorial_message_1">This TutorialTooltip is aligned to the top of the anchor view, and the message is displayed above the indicator.</string>
    <string name="tutorial_message_2">This TutorialTooltip is aligned to the bottom of the anchor view, and the message is displayed below the indicator.</string>
    <string name="tutorial_message_fab">This TutorialTooltip is attached at the center of the FAB and its message is displayed below it.</string>
    <string name="tutorial_message_3">This TutorialTooltip is attached to the CENTER of the anchor View, with its message to the right.</string>

    <string name="tree_times">3 times</string>
    <string name="top">Top</string>
    <string name="center">Center</string>
    <string name="bottom">Bottom</string>
    <string name="clear_all">Clear all</string>
    <string name="dialog_test">Dialog Test</string>
    <string name="chain">Chain</string>

</resources>
