<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Markus Ressel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings">

        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="@color/default_value_startColor"
            android:key="@string/key_startColor"
            android:title="@string/title_startColor"/>

        <com.rarepebble.colorpicker.ColorPreference
            android:defaultValue="@color/default_value_endColor"
            android:key="@string/key_endColor"
            android:title="@string/title_endColor"/>

        <EditTextPreference
            android:defaultValue="0"
            android:dialogTitle="@string/title_startDiameter"
            android:inputType="number"
            android:key="@string/key_startDiameter"
            android:title="@string/title_startDiameter"/>

        <EditTextPreference
            android:defaultValue="15"
            android:dialogTitle="@string/title_targetDiameter"
            android:inputType="number"
            android:key="@string/key_targetDiameter"
            android:title="@string/title_targetDiameter"/>

        <EditTextPreference
            android:defaultValue="3"
            android:dialogTitle="@string/title_strokeWidth"
            android:inputType="number"
            android:key="@string/key_strokeWidth"
            android:title="@string/title_strokeWidth"/>

        <EditTextPreference
            android:defaultValue="300"
            android:dialogTitle="@string/title_delayBetweenWaves"
            android:inputType="number"
            android:key="@string/key_delayBetweenWaves"
            android:title="@string/title_delayBetweenWaves"/>

        <EditTextPreference
            android:defaultValue="3000"
            android:dialogTitle="@string/title_duration"
            android:inputType="number"
            android:key="@string/key_duration"
            android:title="@string/title_duration"/>

        <EditTextPreference
            android:defaultValue="3"
            android:dialogTitle="@string/title_waveCount"
            android:inputType="number"
            android:key="@string/key_waveCount"
            android:title="@string/title_waveCount"/>

    </PreferenceCategory>

</PreferenceScreen>