<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Markus Ressel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/tree_times"/>

        <Button
            android:id="@+id/buttonTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/top"/>

        <Button
            android:id="@+id/buttonCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/center"/>

        <Button
            android:id="@+id/buttonBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/bottom"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/buttonFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:src="@mipmap/ic_launcher"/>

        <Button
            android:id="@+id/buttonDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/dialog_test"/>

        <Button
            android:id="@+id/buttonChain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/chain"/>

        <Button
            android:id="@+id/buttonClearAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/clear_all"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/buttonShowLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show Layout"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_right_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/buttonHideLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hide Layout"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>